added demo rest endpoints. added swagger ui
